force-app/main/default/objects/ssot__EmploymentOfferVettingEvaluation__dlm/fields/ssot__EmploymentOfferId__c.field-meta.xml
<CustomField>
    <fullName>ssot__EmploymentOfferId__c</fullName>
    <label>Employment Offer</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmploymentOfferId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>