force-app/main/default/objects/ssot__EmploymentOfferVettingEvaluation__dlm/fields/ssot__rel_1727366627324_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1727366627324_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EmploymentOfferVettingEvaluation_Emp_rel</label>
    <referenceTo>ssot__EmploymentOffer__dlm</referenceTo>
    <relationshipLabel>EmploymentOfferVettingEvaluation_Emp_rel</relationshipLabel>
    <relationshipName>rel_1727366627324_end</relationshipName>
    <type>Lookup</type>
</CustomField>