force-app/main/default/objects/ssot__EmploymentOfferVettingEvaluation__dlm/fields/ssot__rel_1727366703398_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1727366703398_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EmploymentOfferVettingEvaluation_Vet_rel</label>
    <referenceTo>ssot__VettingEvaluation__dlm</referenceTo>
    <relationshipLabel>EmploymentOfferVettingEvaluation_Vet_rel</relationshipLabel>
    <relationshipName>rel_1727366703398_end</relationshipName>
    <type>Lookup</type>
</CustomField>