force-app/main/default/objects/ssot__EmploymentOfferVettingEvaluation__dlm/fields/ssot__VettingEvaluationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__VettingEvaluationId__c</fullName>
    <label>Vetting Evaluation</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VettingEvaluationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>